# CurveEditor

./: .coverage  .env  .final-test  .gitignore  .hook-fix-test  .hook-refactor-test  .hook-test-file  .pre-commit-config.yaml  .pytest_tips.md  .roomodes  .roorules-architect  .roorules-ask  .roorules-code  .roorules-debug  .roorules-test  .txt  2D Vector and Point Handling in 3DEqualizer.md  2DTrackData.txt  2DTrackData_Point1_only.txt  2DTrackDatav2.txt  3DE_SCRIPTS_README.md  3de_coordinate_test_20250911_084435.txt  3de_export_analysis_20250911_084443.txt  3de_tracking_analysis_20250911_084452.txt  AGENT_FINDINGS_SYNTHESIS.md  AGENT_FINDINGS_VERIFICATION.md  AGENT_ORCHESTRATION_GUIDE.md  AGENT_VERIFICATION_SUMMARY.md  AGENT_VERIFICATION_SYNTHESIS.md  ANALYSIS_INDEX.txt  ANALYSIS_README.md  APPLICATIONSTATE_MIGRATION_AUDIT_REPORT.md  APPLICATIONSTATE_MIGRATION_RELEASE_NOTES.md  ARCHITECTURAL_CONSOLIDATION_ANALYSIS.md  ARCHITECTURAL_REVIEW_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_MIGRATION_GUIDE.md  ARCHITECTURE_REFACTORING_SUMMARY.md  ARCHITECTURE_VERIFICATION_REPORT.md  AUDIT_EXECUTIVE_SUMMARY.txt  (+611 more)
.post-commit-output/: bundle.txt  info.txt  summary.txt
.serena/: project.yml
LogicExamples/: InsertDescription.txt  InsertTrack.py  SetTrackingBwd.py  SetTrackingFwd.py
archive_phase8/: PHASE_8_FINAL_IMPLEMENTATION_PLAN.md  README.md
commands/: Advice.md  TestRules.md  __init__.py  base.py  smooth_command.py
config/: __init__.py
controllers/: event_filter_controller.py  file_operations_manager.py  frame_navigation_controller.py  playback_controller.py  point_edit_controller.py  smoothing_controller.py  state_change_controller.py  timeline_controller.py  tracking_panel_controller.py  view_update_manager.py  zoom_controller.py
core/: DISPLAY_MODE_MIGRATION.md  __init__.py  common_imports.py  config.py  coordinate_detector.py  coordinate_system.py  coordinate_types.py  curve_data.py  curve_segments.py  defaults.py  directory_scan_worker.py  display_mode.py  error_handlers.py  error_handling.py  error_messages.py  error_recovery_manager.py  exception_utils.py  favorites_manager.py  file_utils.py  frame_status_aggregator.py  frame_utils.py  image_state.py  insert_track_algorithm.py  logger_factory.py  logger_utils.py  math_utils.py  message_utils.py  metadata_extractor.py  migration_utils.py  models.py  monitoring.py  path_security.py  point_types.py  service_utils.py  signal_manager.py  signal_types.py  simple_filters.py  spatial_index.py  type_aliases.py  typing_extensions.py  (+5 more)
data/: batch_edit.py  burger-001.csv  csv_export.py  curve_data_utils.py  curve_view.py  curve_view_plumbing.py  test_data.csv  track_quality.py  tracking_direction_utils.py
docs/: ACTIVE_CURVE_CONSOLIDATION_AMENDMENTS.md  ACTIVE_CURVE_CONSOLIDATION_PLAN.md  AGENT_REVIEW_FINDINGS.md  API_COMPATIBILITY_VERIFICATION.md  COMPREHENSIVE_REFACTORING_PLAN.md  CONSOLIDATE_SMOOTHING_FILTERING.md  DOCUMENTATION_STRUCTURE.md  DUPLICATE_STATE_VERIFICATION.md  FRAME_CHANGE_COORDINATOR_ARCHITECTURAL_REVIEW.md  FRAME_CHANGE_COORDINATOR_REFACTOR.md  FRAME_CHANGE_COORDINATOR_REVIEW_SUMMARY.md  PHASE_0_ANALYSIS_INDEX.md  PHASE_0_AUDIT_OVERVIEW.txt  PHASE_0_COVERAGE_GAP_ANALYSIS.md  PHASE_0_COVERAGE_GAP_SUMMARY.txt  PHASE_0_CRITICAL_FINDINGS.md  PHASE_0_PROTOCOL_FIX.md  PHASE_1_PROTOCOL_CORRECTION.md  PHASE_2_5_SIGNAL_MIGRATION.md  PHASE_2_PRODUCTION_CODE_MIGRATION.md  PHASE_MINUS_1_TYPE_SAFETY_REVIEW.md  README.md  REFACTORING_PLAN_2025_05_30.md  REFACTORING_STATUS.md  STATEMANAGER_COMPLETE_MIGRATION_PLAN.md  STATEMANAGER_SIMPLIFIED_MIGRATION_PLAN.md  VERIFICATION_SUMMARY.txt  api-reference.md  architecture.md  auto_center_toggle_plan.md  centering_zoom_refactor_plan.md  code_consolidation.md  consolidation-summary.md  coordinate_transformation_guide.md  coordinate_transformation_refactoring_plan.md  curve_shift_fix.md  debug_cleanup_plan.md  design-decisions.md  documentation.md  features.md  (+21 more)
examples/: fix_curve_shift.py
io_utils/: __init__.py  exr_loader.py  file_load_worker.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
plan_tau/: 00_executive_summary.md  AGENTS.md  AGENT_QUICK_REFERENCE.md  AMENDMENTS.md  ORIGINAL_PLAN_TAU.md  QUICK_START.md  README.md  implementation_guide.md  phase1_critical_safety_fixes.md  phase2_quick_wins.md  phase3_architectural_refactoring.md  phase4_polish_optimization.md  risk_and_rollback.md  verification_and_testing.md  verify_implementation.sh
profiling/: cache_analysis.py  cache_profiler.py  zoom_cache_performance_fix.py  zoom_cache_test.py
protocols/: __init__.py  data.py  services.py  state.py  ui.py
refactoring/: 00_OVERVIEW.md  01_PHASES_1_TO_3.md  02_PHASES_4_TO_6.md  03_PHASES_7_TO_8_AND_COMPLETION.md  PHASE_6.1_MIGRATION_REPORT.md  PHASE_6.3_RISK_ASSESSMENT.md  PHASE_6_DEPRECATION_REMOVAL_PLAN.md.bak
rendering/: __init__.py  background_renderer.py  curve_renderer.py  info_renderer.py  optimized_curve_renderer.py  optimized_curve_renderer.py.backup  optimized_curve_renderer_improved.py  point_renderer.py  render_state.py  rendering_protocols.py  visual_settings.py
scripts/: check_legacy_patterns.py  measure_memory.py  migration_progress.py
services/: README.md  __init__.py  analysis_service.py  analysis_service_old.py  cache_service.py  centering_zoom_service.py  compressed_snapshot.py  coordinate_service.py  curve_analysis_service.py  curve_service.py  curve_utils.py  data_analysis.py  data_service.py  data_service_clean.py  dialog_service.py  enhanced_curve_view_integration.py  event_handler.py  extrapolation_service.py  file_io_service.py  file_service.py  file_service.py.bak  filtering_service.py  gap_filling_service.py  geometry_service.py  history_service.py  image_cache_manager.py  image_sequence_service.py  image_service.py  input_service.py  interaction_service.py  interaction_service.py.backup  interaction_service_adapter.py  logging_service.py  main_window_unified_patch.py  models.py  point_manipulation.py  problem_detection_service.py  protocols.py  selection_service.py  service_protocols.py  (+16 more)
(+526 files in other folders)
